# x86-assembly

exercises/hello-world/: CMakeLists.txt  example.asm  hello_world.asm  hello_world_test.c  hello_world_test.cpp
